<resources>
    <string name="app_name">Order Up</string>

    <!-- spinner labels -->
    <string name="orderGuideSelectionLabel">Select the Order Guide</string>
    <string name="actionOptionLabel">Select Action Option</string>
    <string name="iconSpinnerLabel">Select Icon -</string>
    <string name="iconNamePlaceholder">Name</string>

    <!-- buttons -->
    <string name="addNewOrderGuide">*Add New Order Guide*</string>
    <string name="createActionBtn">Create Action</string>
    <string name="deleteBtn">Confirm</string>
    <string name="cancelBtn">Cancel</string>
    <string name="processButton">Process Order</string>
    <string name="mainMenuButton">Main Menu</string>
    <string name="createOrderGuide">Create List</string>
    <string name="selectTableButton">Select Table</string>
    <string name="addNewItem">Add Item</string>
    <string name="saveOrderGuide">Save</string>
    <string name="okBtn">OK</string>
    <string name="xDelBtn">x</string>

    <!-- Header Labels -->
    <string name="editOrderGuideHeader">Edit Order Guide</string>
    <string name="addOrderGuideLabel">Create an Order Guide</string>

    <!-- labels -->
    <string name="itemNameLabel">Item Name</string>
    <string name="itemParLabel">Par</string>
    <string name="itemOnHand">On Hand</string>
    <string name="orderQty">Order Qty</string>
    <string name="deleteItemLabel">Del</string>
    <string name="orderGuideName">Order Guide Name:</string>


    <!--Hints-->
    <string name="orderNameHint">Order Guide</string>
    <string name="zeroPlaceHolder">0</string>
    <string name="delGuidePlaceholder">Dog Bone</string>
    <string name="itemPlaceHolder">Item in order-------------------------------------</string>

    <!--Delete order guide activity strings-->
    <string name="checkDeleteMsg">Are you sure you would like to delete this order guide?</string>

    <!--Table Action options-->
    <string name="processOrder">Process \n Order \n Guide</string>
    <string name="editOrder">Edit \n Order \n Guide</string>
    <string name="deleteOrder">Delete \n Order \n Guide</string>
    <string name="viewOrder">View \n Order \n Guide</string>
    <!--Create a new order guide button-->
    <string name="createOrder">Create New Order Guide</string>

    <!-- String arrays -->
    <string-array name="actionOptions">
        <item>Process Order Guide</item>
        <item>Edit Order Guide</item>
        <item>Delete Order Guide</item>
        <item>View Order Guide</item>
    </string-array>
</resources>