<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp"
              android:gravity="center"
              tools:context=".MainActivity">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/orderGuideSelectionLabel"
                  android:id="@+id/txtMainSpinnerLabel"
                  android:textSize="20dp"
                  android:textStyle="bold"/>

        <Spinner android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textAlignment="center"
                 android:id="@+id/spinnerOrderGuides"/>

    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectTableButton"
            android:text="@string/selectTableButton"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/addNewOrderGuide"
                android:id="@+id/txtAddOrderGuide"
                android:textColor="@color/red"
                android:textSize="15dp"/>


</LinearLayout>