<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditOrderGuideActivity">

    <!-- layout container for the Main label and Order Guide name edittext tag Also contains buttons and column labels-->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:id="@+id/layoutLabelsEdit"
                  android:orientation="vertical"
                  android:layout_marginTop="5dp"
                  android:gravity="top"
                  app:layout_constraintHeight_percent="0.25"
                  app:layout_constraintBottom_toTopOf="@id/layoutRecEdit"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/editOrderGuideHeader"
                  android:textSize="25dp"
                  android:layout_marginTop="5dp"
                  android:textStyle="bold"
                  android:gravity="center"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/layoutGuideNameEdit"
                      android:orientation="horizontal"
                      android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/orderGuideName"/>
            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginLeft="15dp"
                      android:gravity="center"
                      android:id="@+id/edtOrderGuideNameEdit"/>

        </LinearLayout>

        <!--Layout for the buttons-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/layoutButtonsEdit"
                      android:gravity="center"
                      android:layout_marginTop="5dp"
                      app:layout_constraintTop_toBottomOf="@id/layoutGuideNameEdit"
                      app:layout_constraintBottom_toTopOf="@id/layoutColLabelsEdit"
                      app:layout_constraintEnd_toEndOf="parent">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/addNewItem"
                    android:id="@+id/btnAddItemEdit"
                    android:layout_gravity="center"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/saveOrderGuide"
                    android:id="@+id/btnSaveOrderGuideEdit"
                    android:layout_gravity="center"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/cancelBtn"
                    android:id="@+id/btnCancelEdit"
                    android:layout_gravity="center"/>
        </LinearLayout>

        <!--Layout for column labels-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="5dp"
                      app:layout_constraintTop_toBottomOf="@id/layoutButtonsEdit"
                      app:layout_constraintBottom_toTopOf="@id/layoutRecEdit"
                      android:id="@+id/layoutColLabelsEdit"
                      android:gravity="left">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:layout_marginStart="15dp"
                      android:text="@string/deleteItemLabel"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:layout_marginStart="30dp"
                      android:text="@string/itemNameLabel"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:layout_marginStart="150dp"
                      android:text="@string/itemParLabel"/>

        </LinearLayout>

    </LinearLayout>

    <!--layout for the recycler view displaying items -->
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="0dp"
                                           android:gravity="center"
                                           android:layout_marginTop="0dp"
                                           app:layout_constraintHeight_percent=".7"
                                           android:id="@+id/layoutRecEdit"
                                           android:layout_centerHorizontal="true"
                                           app:layout_constraintTop_toBottomOf="@id/layoutLabelsEdit"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintVertical_chainStyle="packed">
        <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_constrainedHeight="true"
                                                   android:id="@+id/editListRec"/>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>