<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".AddOrderGuideActivity">

    <!-- layout container for the Main label and Order Guide name edittext tag-->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:id="@+id/layoutLabels"
                  android:orientation="vertical"
                  android:layout_marginTop="5dp"
                  android:gravity="top"
                  app:layout_constraintHeight_percent="0.25"
                  app:layout_constraintBottom_toTopOf="@id/layoutRec"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/addOrderGuideLabel"
                  android:textSize="25dp"
                  android:layout_marginTop="5dp"
                  android:textStyle="bold"
                  android:gravity="center"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/layoutGuideName"
                      android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/orderGuideName"/>
            <EditText android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="15dp"
                      android:hint="Wine List"
                      android:layout_gravity="center"
                      android:id="@+id/edtTableName"/>

        </LinearLayout>

        <!--Layout for the buttons-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:id="@+id/layoutButtons"
                      android:gravity="center"
                      android:layout_marginTop="5dp"
                      app:layout_constraintTop_toBottomOf="@id/layoutGuideName"
                      app:layout_constraintBottom_toTopOf="@id/layoutColLabels"
                      app:layout_constraintEnd_toEndOf="parent">
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/addNewItem"
                    android:id="@+id/btnAddItem"
                    android:layout_gravity="center"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/createOrderGuide"
                    android:id="@+id/btnCreateList"
                    android:layout_gravity="center"/>
            <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/cancelBtn"
                    android:id="@+id/btnCancelCreate"/>

        </LinearLayout>

        <!--Layout for column labels-->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:layout_marginTop="5dp"
                      app:layout_constraintTop_toBottomOf="@id/layoutButtons"
                      app:layout_constraintBottom_toTopOf="@id/layoutRec"
                      android:id="@+id/layoutColLabels"
                      android:gravity="left">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:layout_marginLeft="20dp"
                      android:layout_marginRight="15dp"
                      android:text="@string/itemNameLabel"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textStyle="bold"
                      android:layout_marginLeft="100dp"
                      android:text="@string/itemParLabel"/>

        </LinearLayout>

    </LinearLayout>

    <!--layout for the recycler view displaying items -->
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="0dp"
                                           android:gravity="center"
                                           android:layout_marginTop="0dp"
                                           app:layout_constraintHeight_percent=".7"
                                           android:id="@+id/layoutRec"
                                           android:layout_centerHorizontal="true"
                                           app:layout_constraintTop_toBottomOf="@id/layoutLabels"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           app:layout_constraintVertical_chainStyle="packed">
        <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_constrainedHeight="true"
                                                   android:id="@+id/newListRec"/>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>