<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ViewOrderGuideActivity"
>

<!--Adding header image for top of the dashboard screen-->
<com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".30"
        android:scaleType="fitXY"
        android:id="@+id/viewHeaderImage"
        android:src="@drawable/viewheader01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/SpecificCornerRounded"/>

<!--Button to process order or return to main menu-->
<Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="6"
        app:layout_constraintTop_toBottomOf="@+id/viewHeaderImage"
        android:text="@string/mainMenuButton"
        android:textSize="23sp"
        android:textColor="@color/yellow"
        style="@style/RedGrayButton"
        android:id="@+id/returnMainBtn"
/>


<!--Labels for columns-->
<LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/labelLayoutView"
              android:layout_marginBottom="20dp"
              app:layout_constraintTop_toBottomOf="@id/returnMainBtn"
              android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/itemNameLabelView"
                  android:text="@string/itemNameLabel"
                  android:textStyle="bold"
                  android:textSize="22sp"
                  android:textColor="@color/lightBlueAccentDark"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="20dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toLeftOf="@+id/qtyLabelView"
        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/qtyLabelView"
                  android:text="@string/itemParLabel"
                  android:textStyle="bold"
                  android:textSize="22sp"
                  android:textColor="@color/lightBlueAccentDark"
                  android:layout_marginEnd="20dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toRightOf="@+id/itemNameLabelView"
                  app:layout_constraintRight_toRightOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:layout_width="match_parent"
          android:layout_height="3dp"
          android:id="@+id/dividerLine01"
          android:background="@color/forest"
          app:layout_constraintTop_toBottomOf="@id/itemNameLabelView"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginTop="0dp"
          android:layout_marginBottom="0dp"/>
</LinearLayout>

<!--layout for the recycler view displaying items -->
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="0dp"
                                           android:gravity="center"
                                           android:layout_marginTop="20dp"
                                           app:layout_constraintHeight_percent=".55"
                                           android:id="@+id/scrollForRecProcessView"
                                           android:layout_centerHorizontal="true"
                                           app:layout_constraintTop_toBottomOf="@id/labelLayoutView"
                                           app:layout_constraintBottom_toBottomOf="parent"
                                           android:layout_marginBottom="20dp"
                                           app:layout_constraintVertical_chainStyle="packed">
        <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   app:layout_constrainedHeight="true"
                                                   android:id="@+id/orderListRecView"/>
    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>